infra/k8s/list-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: list-srv
spec:
  type: NodePort
  selector:
    app: list
  ports:
    - name: list
      protocol: TCP
      port: 4000
      targetPort: 4000
